--- a/stylo.css
+++ b/stylo.css
@@ -7,7 +7,7 @@
 }
 
 body {
-   background-image     : linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/bandera.jpg");
+   background-image     : linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../IMG/bandera.jpg");
    background-repeat    : no-repeat;
    background-size      : cover;
    background-attachment: fixed;
